--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <title>Trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-
+        Trillo
     </body>
 </html>
