--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <title>Trillo &mdash; Your all-in-one booking app</title>
+        <title>Flexbook &mdash; Your all-in-one booking app</title>
     </head>
     <body>
         <div class="container">
             <header class="header">
-                <img src="img/logo.png" alt="Trillo logo" class="logo">
+                <img src="img/logo.png" alt="Flexbook logo" class="logo">
 
                 <form action="#" class="search">
                     <input type="text" class="search__input" placeholder="Search hotels">
@@ -45,7 +45,43 @@
             </header>
             <div class="content">
                 <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-home"></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                                </svg>
+                                <span>Flight</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                                </svg>
+                                <span>Car rental</span>
+                            </a>
+                        </li>
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="img/sprite.svg#icon-map"></use>
+                                </svg>
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="legal">
+                        &copy; 2020 by Flexbook. All rights reserved.
+                    </div>
                 </nav>
                 <main class="hotel-view">
                     Hotel View
