--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span class="user-nav__notification">13</span>
                     </div>
                     <div class="user-nav__user">
-                        <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
+                        <img src="img/user.png" alt="User photo" class="user-nav__user-photo">
                         <span class="user-nav__user-name">Cristian</span>
                     </div>
                 </nav>
