--- a/index.html
+++ b/index.html
@@ -86,13 +86,25 @@
                 <main class="hotel-view">
                     <div class="gallery">
                         <figure class="gallery__item">
-                            <img src="img/hotel-1.jpg" alt="Hotel 1" class="gallery__photo">
+                            <img srcset="img/hotel-1-small.jpg 300w, img/hotel-1.jpg 1200w"
+                                sizes="(max-width: 56.25em) 33.3vw, 18.75em"
+                                alt="Hotel 1"
+                                class="gallery__photo"
+                                src="img/hotel-1.jpg">
                         </figure>
                         <figure class="gallery__item">
-                            <img src="img/hotel-2.jpg" alt="Hotel 2" class="gallery__photo">
+                            <img srcset="img/hotel-2-small.jpg 300w, img/hotel-2.jpg 1200w"
+                                sizes="(max-width: 56.25em) 33.3vw, 18.75em"
+                                alt="Hotel 2"
+                                class="gallery__photo"
+                                src="img/hotel-2.jpg">
                         </figure>
                         <figure class="gallery__item">
-                            <img src="img/hotel-3.jpg" alt="Hotel 3" class="gallery__photo">
+                            <img srcset="img/hotel-3-small.jpg 300w, img/hotel-3.jpg 1200w"
+                                sizes="(max-width: 56.25em) 33.3vw, 18.75em"
+                                alt="Hotel 3"
+                                class="gallery__photo"
+                                src="img/hotel-3.jpg">
                         </figure>
                     </div>
 
